Smartphone fix
Attempt to fix background image not showing up on phones

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -79,3 +79,11 @@
         font-size: 35px;
     }
 }
+
+/*  Smartphones */
+@media only screen and (min-width: 150px) and (max-width: 500px) {
+    .header-area {
+        height: 200px;
+        min-height: 300px;
+    }
+}
